[gd_scene load_steps=5 format=2]

[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Yellow/BeaconDish/BeaconDish_Panel/BeaconDish_EffectPanel.gd" type="Script" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/TowerInformationPanel/TowerIngredientIcons/SingleIngredientPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_BodyBackground.png" type="Texture" id=4]

[node name="BeaconDish_EffectPanel" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 2 )

[node name="VBoxContainer" parent="." index="0"]
margin_bottom = 71.0

[node name="MarginContainer" parent="VBoxContainer/HeaderMarginer/MarginContainer" index="1"]
margin_left = 3.0
margin_right = 47.0

[node name="Label" parent="VBoxContainer/HeaderMarginer/MarginContainer/MarginContainer" index="0"]
margin_right = 44.0
text = "B-D Effects"

[node name="BodyMarginer" parent="VBoxContainer" index="2"]
margin_bottom = 70.0
size_flags_horizontal = 6

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyMarginer" index="0"]
margin_right = 110.0
margin_bottom = 56.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BodyMarginer" index="1"]
margin_right = 110.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyMarginer/MarginContainer" index="0"]
margin_left = 3.0
margin_top = 3.0
margin_right = 107.0
margin_bottom = 53.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer" index="0"]
margin_right = 104.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="ElementalBuffPanel" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/VBoxContainer" index="0" instance=ExtResource( 3 )]
margin_right = 104.0

[node name="AttkSpeedBuffPanel" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/VBoxContainer" index="1" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 104.0
margin_bottom = 32.0

[node name="RangeBuffPanel" parent="VBoxContainer/BodyMarginer/MarginContainer/HBoxContainer/VBoxContainer" index="2" instance=ExtResource( 3 )]
margin_top = 36.0
margin_right = 104.0
margin_bottom = 50.0

[node name="BottomBorder" parent="VBoxContainer" index="3"]
margin_top = 70.0
margin_bottom = 71.0
